Sun Oct 12 21:07:04 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/Makefile.tests:
	* tests/Tests.bor:
	* tests/run_test.lst:
	* tests/tests.mpc: Regular exercise for building and running the
	  test on all the platforms.

Sun Oct 12 19:03:31 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* Kokyu/Dispatcher_Task.cpp: Changed the Null lock in the
	  allocator to Mutex lock. 

Sun Oct 12 17:20:40 2003  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Select_Reactor_Base.cpp: Fix for [BUG 1268]. Please refer to
	  bugzilla database at

  	  http://deuce.doc.wustl.edu/bugzilla/show_bug.cgi?id=1268

	  for more details on the source of the problem and the solution
	  for the same. Thanks to Carlos O'Ryan for providing patches.

	* tests/Reactor_Notification_Queue_Test.cpp:
	* tests/Reactor_Notification_Queue_Test.dsp:
	* tests/tests.dsw: New test that stresses the feature of sending
	  notify messages to the reactor. Thanks to Carlos O'Ryan for
	  providing the test.

Sun Oct 12 14:08:38 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* bin/MakeProjectCreator/config/kokyu_dsrt_schedulers.mpb:
	* bin/MakeProjectCreator/config/kokyu_dsrt_scheduler_client.mpb:
	* bin/MakeProjectCreator/config/kokyu_dsrt_scheduler_server.mpb:
	  Added MPC base project files for Kokyu DSRT schedulers. 

Sun Oct 12 11:48:02 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* Kokyu/Kokyu.html:
	* Kokyu/kokyu1.jpg:
	* Kokyu/kokyu2.jpg:
	* Kokyu/KokyuEC.jpg: Added some initial documentation on Kokyu. 

Sun Oct 12 17:34:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Removed mentioning of tests/run_tests.bat, it has been removed
          some time ago and the perl script run_tests.pl is the only one
          to use. Updated documentation for Borland support. CBuilderX is
          now supported, but not the new preview compiler that is shipped
          with CBuilderX.
