@@ -1,3 +1,9 @@
+Sun Oct 12 20:17:45 2003  Nanbor Wang  <nanbor@.cs.wustl.edu>
+
+	* Makefile: Added a new CIAO_Core target for building all CIAO
+	  core libraries and tools, including everything they need.
+	  Thanks to Gautam for suggesting this.
+
 Sun Oct 12 21:07:04 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* tests/Makefile.tests:
